showed tags on plugin page

--- a/frontend/app/styles/_plugin.sass
+++ b/frontend/app/styles/_plugin.sass
@@ -8,6 +8,10 @@
          height: 100%
          line-height: 68px
          margin-right: 10px
+      md-chip
+         height: 22px
+         line-height: 22px
+         cursor: pointer
    .plugin_name
       margin-right: 50px
       display: flex
