removed box-shadow on md-chips in plugin page

--- a/frontend/app/styles/_plugin.sass
+++ b/frontend/app/styles/_plugin.sass
@@ -8,6 +8,8 @@
          height: 100%
          line-height: 68px
          margin-right: 10px
+      md-chips-wrap
+         box-shadow: initial
       md-chip
          height: 22px
          line-height: 22px
