changed border-radius of chips in plugin page

--- a/frontend/app/styles/_plugin.sass
+++ b/frontend/app/styles/_plugin.sass
@@ -14,6 +14,7 @@
          height: 22px
          line-height: 22px
          cursor: pointer
+         border-radius: 4px
    .plugin_name
       margin-right: 50px
       display: flex
