plugin page: display only tags that are in the current lang, fallback on english

--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -39,7 +39,7 @@
       </div>
       <div layout="row">
          <md-chips>
-            <md-chip ui-sref="tag({key: tag.key})" ng-show="tag.lang == currentLang" ng-repeat="tag in plugin.tags">{{tag.tag}}</md-chip>
+            <md-chip ui-sref="tag({key: tag.key})" ng-repeat="tag in tags">{{tag.tag}}</md-chip>
          </md-chips>
       </div>
    </div>
