--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -29,9 +29,12 @@ a
 h2
    margin: 0
    color: rgba(0,0,0,0.54)
+   font-weight: normal
+   font-suize: 2em
 h4
    margin: 0
    color: $grey
+   font-weight: normal
 
 ul li
    list-style-type: none
