--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -27,7 +27,7 @@
          <span class="download">
             <span class="downloads">
                <span class='pill bg_red'>
-                  <span ng-bind-html='plugin.downloaded | nrFormat'></span>
+                  <span ng-bind-html='plugin.download_count | nrFormat'></span>
                   <md-tooltip  md-direction="top">downloads</md-tooltip>
                </span>
             </span>
