usage of download_count in plugin_list

--- a/frontend/app/views/plugin_list.html
+++ b/frontend/app/views/plugin_list.html
@@ -37,7 +37,7 @@
                      </md-tooltip>
                   </span>
                   <span class="downloads" flex flex-sm='20'>
-                     <span class='pill bg_red'>{{plugin.downloaded}}
+                     <span class='pill bg_red'>{{plugin.download_count}}
                         <md-tooltip>downloads</md-tooltip>
                      </span>
                   </span>
