--- a/frontend/app/views/panel.html
+++ b/frontend/app/views/panel.html
@@ -4,35 +4,27 @@
 
       <form>
          <md-input-container>
-            <label>Last Name</label>
-            <input type="text">
-         </md-input-container>
-         <md-input-container>
-            <label>First Name</label>
-            <input type="text">
-         </md-input-container>
-         <md-input-container>
             <label>Real Name</label>
-            <input type="text">
+            <input type="text" ng-model="user.realname">
          </md-input-container>
          <md-input-container>
             <label>Email</label>
-            <input type="text">
+            <input type="text" ng-model="user.email">
          </md-input-container>
          <md-input-container>
             <label>Website</label>
-            <input type="text">
+            <input type="text" ng-model="user.website">
          </md-input-container>
          <md-input-container>
             <label>Password</label>
-            <input type="text">
+            <input type="password" ng-model="password">
          </md-input-container>
          <md-input-container>
             <label>Confirm password</label>
-            <input type="text">
+            <input type="password" ng-model="password_repeat">
          </md-input-container>
       </form>
-         <md-button class="md-raised md-primary">Update</md-button>
+         <md-button class="md-raised md-primary" ng-click="update()">Update</md-button>
    </div>
    <div flex="33">
       <h2>Actions</h2>
