created a dialog to link an account

--- a/frontend/app/views/panel.html
+++ b/frontend/app/views/panel.html
@@ -31,8 +31,8 @@
 
       <md-list>
          <md-list-item>
-            <md-button>
-               <h4>Link my account to omniauth providers</h4>
+            <md-button ng-click="linkAccount($event)">
+               <h4>Link an external social account</h4>
             </md-button>
          </md-list-item>
          <md-list-item>
