--- a/frontend/app/views/panel.html
+++ b/frontend/app/views/panel.html
@@ -31,7 +31,7 @@
 
       <md-list>
          <md-list-item>
-            <md-button ng-click="linkAccount($event)">
+            <md-button ng-click="openLinkAccountDialog($event)">
                <h4>Link an external social account</h4>
             </md-button>
          </md-list-item>
