--- a/frontend/app/views/panel.html
+++ b/frontend/app/views/panel.html
@@ -9,7 +9,7 @@
          </md-input-container>
          <md-input-container>
             <label>Email</label>
-            <input type="text" ng-model="user.email">
+            <input type="email" ng-model="user.email" disabled>
          </md-input-container>
          <md-input-container>
             <label>Website</label>
@@ -18,6 +18,12 @@
          <md-input-container>
             <label>Password</label>
             <input type="password" ng-model="password">
+            <div ng-messages="form.password.$error">
+               <div ng-message="different">Password and Confirmation aren't the same
+               </div>
+               <div ng-message="tooshort">Password must be at least 6 characters</div>
+               <div ng-message="toolong">Password must not exceed 26 characters</div>
+            </div>
          </md-input-container>
          <md-input-container>
             <label>Confirm password</label>
@@ -32,7 +38,7 @@
       <md-list>
          <md-list-item>
             <md-button ng-click="openLinkAccountDialog($event)">
-               <h4>Link an external social account</h4>
+               <h4>Manage my external social accounts</h4>
             </md-button>
          </md-list-item>
          <md-list-item>
