added a slighltly darker grey for the overall background

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -23,6 +23,9 @@ body
    font-size: 15px
    line-height: 1.5em
 
+md-content, .md-subheader
+   background-color: #fafafa
+
 .main
    min-height: 100%
    margin-top: 6px
