base for 'api keys' feature

--- a/frontend/app/views/linkaccount.html
+++ b/frontend/app/views/linkaccount.html
@@ -1,4 +1,4 @@
-<md-dialog class="linkaccount-dialog">
+<md-dialog class="dialog">
    <md-toolbar>
       <div class="md-toolbar-tools">
          <h2>Link an external social account</h2>
