--- a/frontend/app/views/panel.html
+++ b/frontend/app/views/panel.html
@@ -4,7 +4,7 @@
 
       <form id="profile-form" ng-submit="update()">
          <md-input-container>
-            <label>Username</label>
+            <label>Usernamep</label>
             <input type="text" ng-model="user.username">
          </md-input-container>
          <md-input-container>
@@ -55,7 +55,7 @@
             </md-button>
          </md-list-item>
          <md-list-item>
-            <md-button class="md-raised">
+            <md-button class="md-raised" ui-sref="apikeys">
                <h4>Manage API keys (and according Apps)</h4>
             </md-button>
          </md-list-item>
