contact view: adding link to suggestion platform

--- a/frontend/app/styles/_submit_plugin.sass
+++ b/frontend/app/styles/_submit_plugin.sass
@@ -1,3 +1,20 @@
+#submit_form
+   .note
+      background-color: #f0f0f0
+      color: #949494
+      margin: 14px 0
+      border-radius: 4px
+      padding: 6px
+      p
+         margin: 0
+         text-decoration: underline
+         span
+            font-weight: 700
+            text-decoration: none
+   .submit-button
+      margin: 0
+
+
 .xml_description
    background-color: $verylightgrey
    margin-top: 20px
