transfered the note on contact.html

--- a/frontend/app/styles/_contact.sass
+++ b/frontend/app/styles/_contact.sass
@@ -8,3 +8,32 @@
    content: "\f040"
 .messagebox:after
    content: "\f0e5"
+
+#contactForm
+   .note
+      background-color: #f0f0f0
+      color: #949494
+      margin: 14px 0
+      border-radius: 4px
+      padding: 6px
+      p
+         font-size: 14px
+         margin: 0
+         padding-left: 14px
+         text-decoration: underline
+         span
+            font-weight: 700
+            text-decoration: none
+
+.note
+   background-color: #f0f0f0
+   color: #949494
+   margin: 14px 0
+   border-radius: 4px
+   padding: 6px
+   p
+      margin: 0
+      text-decoration: underline
+      span
+         font-weight: 700
+         text-decoration: none
