--- a/frontend/app/views/signin.html
+++ b/frontend/app/views/signin.html
@@ -19,9 +19,9 @@
 
       <div>
          <md-button ng-click="ctrl.linkAccount('github')"><i class="fa fa-github social-icon"></i></md-button>
-         <md-button><i class="fa fa-google social-icon"></i></md-button>
+<!--          <md-button><i class="fa fa-google social-icon"></i></md-button>
          <md-button><i class="fa fa-facebook social-icon"></i></md-button>
-         <md-button><i class="fa fa-twitter social-icon"></i></md-button>
+         <md-button><i class="fa fa-twitter social-icon"></i></md-button> -->
       </div>
    </div>
 </div>
