added the claim an authorship view

--- a/frontend/app/styles/_panel.sass
+++ b/frontend/app/styles/_panel.sass
@@ -13,3 +13,13 @@
             font-weight: 700
       md-list-item
          padding: 10px 20px
+
+.claim_authorship
+   padding-bottom: 20px
+   width: 50%
+   .explanations, h3, form
+      width: 90%
+      margin: 0 auto
+   h3
+      margin-top: 20px
+      margin-bottom: 10px
