--- a/frontend/app/views/panel.html
+++ b/frontend/app/views/panel.html
@@ -55,7 +55,7 @@
 
       <md-list>
          <md-list-item>
-            <md-button class="md-raised">
+            <md-button class="md-raised" ng-click="openClaimAuthorshipDialog($event)">
                <h4>Claim an authorship</h4>
             </md-button>
          </md-list-item>
