--- a/frontend/app/views/linkaccount.html
+++ b/frontend/app/views/linkaccount.html
@@ -11,9 +11,9 @@
    <div class="link-new-account">
       <h2>Link a new account</h2>
       <md-button ng-click="connect('github')"><i class="fa fa-github social-icon"></i></md-button>
-      <md-button ng-click="connect('google')"><i class="fa fa-google social-icon"></i></md-button>
+<!--       <md-button ng-click="connect('google')"><i class="fa fa-google social-icon"></i></md-button>
       <md-button ng-click="connect('facebook')"><i class="fa fa-facebook social-icon"></i></md-button>
-      <md-button ng-click="connect('twitter')"><i class="fa fa-twitter social-icon"></i></md-button>
+      <md-button ng-click="connect('twitter')"><i class="fa fa-twitter social-icon"></i></md-button> -->
    </div>
    <div class="current-accounts">
       <h2>Your external accounts</h2>
