allows client and api to handle plugin watchs

--- a/frontend/app/styles/_panel.sass
+++ b/frontend/app/styles/_panel.sass
@@ -25,3 +25,12 @@
       margin-bottom: 10px
    form button
       margin-top: 24px
+
+#notifications
+   .notifications-list
+      md-list-item
+         p
+            max-width: 300px
+            text-align: center
+            font-size: 20px
+            font-weight: 500
