--- a/frontend/app/views/panel.html
+++ b/frontend/app/views/panel.html
@@ -65,7 +65,7 @@
             </md-button>
          </md-list-item>
          <md-list-item>
-            <md-button class="md-raised">
+            <md-button class="md-raised" ui-sref="notifications">
                <h4>Notifications settings</h4>
             </md-button>
          </md-list-item>
