--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -35,6 +35,10 @@
                <i class="fa fa-2x fa-download white"></i>
                <md-tooltip md-direction="top">Download</md-tooltip>
             </md-button>
+            <md-button ng-show="authed" class="md-fab md-primary md-raised watch-button" ng-click="watch()">
+               <i class="fa fa-2x fa-eye white"></i>
+               <md-tooltip md-direction="top">Watch</md-tooltip>
+            </md-button>
          </span>
       </div>
       <div layout="row">
